--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,3 +8,4 @@ RUN python -m pip install --upgrade pip
 COPY requirements.txt /backend/
 RUN pip install -r requirements.txt
 COPY . /backend/
+WORKDIR /backend/backend
