--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.8.3",
+    "dotenv": "^16.3.1",
     "export-from-json": "^1.7.2",
     "html2pdf.js": "^0.10.1",
     "mutationobserver-shim": "^0.3.7",
