mysql db & env en front

--- a/backend/backend/backend/.env
+++ b/backend/backend/backend/.env
@@ -2,9 +2,9 @@ DEBUG=True
 SECRET_KEY=django-insecure-1humh3coiswovl0j_-4v_575gp=+5!s#40@omedbgoct(!qk!+
 
 # Database settings for the default database ('default' key in DATABASES dictionary)
-DATABASES_default_ENGINE=django.db.backends.postgresql
-DATABASES_default_NAME=test
+DATABASES_default_ENGINE=django.db.backends.mysql
+DATABASES_default_NAME=opticanostra
 DATABASES_default_USER=root
 DATABASES_default_PASSWORD=root
-DATABASES_default_HOST=postgres_app
-DATABASES_default_PORT=5432
+DATABASES_default_HOST=mysql
+DATABASES_default_PORT=3306
